--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "equal-but-not-falsy",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Picomodule to determine if two things are equal, but not falsy.",
   "main": "index.js",
+  "typings": "index.d.ts",
   "author": "Antoine Beauvais-Lacasse <antoine.beaulac@gmail.com>",
   "license": "ISC"
 }
